tenants/le-portail/applications/production/wordpress/epilibres/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-epilibres
  namespace: ${tenant}-wordpress-epilibres
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`epilibres.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`epi-libres.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`epis-libres.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
